# AI-Computing-System-Lab

./: .gitattributes  .gitignore  README.md
Lab1/: readme.txt
Lab1/exp_2_1_mnist_mlp/stu_upload/: layers_1.py  mnist_mlp_cpu.py
Lab1/exp_2_2_mnist_mlp_dlp/stu_upload/: layers_1.py  mnist_mlp_cpu.py  mnist_mlp_demo.py
Lab2/: env.sh  mnist_mlp_quant_param.npz  readme.txt  vgg19_quant_param_new.npz
Lab2/exp_2_2_mnist_mlp_dlp/stu_upload/: mnist_mlp_cpu.py
Lab2/exp_3_1_vgg/stu_upload/: layers_2.py  vgg_cpu.py
Lab2/exp_3_2_vgg_dlp/stu_upload/: vgg19_demo.py
Lab2/exp_3_3_style_transfer/: main_exp_3_3.py
Lab2/exp_3_3_style_transfer/stu_upload/: layers_1.py  layers_2.py
Lab3/exp_4_1_vgg19_student/: imagenet-vgg-verydeep-19.mat
Lab3/exp_4_1_vgg19_student/stu_upload/: evaluate_cpu.py  evaluate_mlu.py  vgg19_int8.pb
Lab3/exp_4_3_fast_style_transfer_train_student/: style.py
Lab3/exp_4_4_custom_tensorflow_op_student/: main_exp_4_4.py  readme.txt
Lab4/code_chap_5_1_student/: readme.txt
Lab4/code_chap_5_1_student/models/: clean.sh
Lab4/code_chap_5_1_student/src/offline/: CMakeLists.txt  clean.sh  run.sh
Lab4/code_chap_5_1_student/src/offline/include/: cnrt.h  data_provider.h  data_transfer.h  inference.h  post_processor.h  style_transfer.h
Lab4/code_chap_5_1_student/src/offline/src/: data_provider.cpp  inference.cpp  post_processor.cpp  style_transfer.cpp
Lab4/code_chap_5_2_student/: build.sh  readme.txt  run.sh
Lab4/code_chap_5_3_student/: readme.txt
Lab5/: readme.txt
Lab5/bert/: readme.txt
Lab5/east/: readme.txt
Lab5/yolov3/: readme.txt
(+157 files in other folders)
